--- a/style.css
+++ b/style.css
@@ -52,6 +52,7 @@ style
         color: white;
         font-weight: bold;
         cursor: pointer;
+        box-sizing: border-box;
         transition: 0,3s;
     }
 
