--- a/style.css
+++ b/style.css
@@ -44,6 +44,7 @@ style
         padding: 5px;
         border: 1px solid #ccc;
         border-radius: 3px;
+        box-sizing: border-box;
     }
 
     input[type="submit"]
